--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,8 +1070,8 @@
    ],
    "source": [
     "names_and_ranks = []\n",
-    "for city in city_names:\n",
-    "    names_and_ranks.append(f'{[i+1]}. ')\n",
+    "for index in city_names:\n",
+    "    names_and_ranks.append(f'{[inde+1]}. ')\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
