--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for index i"
+    "for index in city_populations:\n",
+    "    city_populations.append('f')"
    ]
   },
   {
