--- a/index.ipynb
+++ b/index.ipynb
@@ -1123,7 +1123,7 @@
    "source": [
     "city_populations = []\n",
     "for index in city_populations:\n",
-    "    city_populations.append(f'{city_pop})"
+    "    city_populations.append(f'{city_population})"
    ]
   },
   {
