--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,7 +1122,7 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for index in city_populations:\n",
+    "for cit in city_populations:\n",
     "    city_populations.append(f'{city_population})"
    ]
   },
