--- a/index.ipynb
+++ b/index.ipynb
@@ -1122,8 +1122,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for cit in city_populations:\n",
-    "    city_populations.append(f'{city_population})"
+    "for city in cities:\n",
+    "    city_populations.append(f'city)"
    ]
   },
   {
