--- a/index.ipynb
+++ b/index.ipynb
@@ -1117,22 +1117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-38a5c780ca0a>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-38a5c780ca0a>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    city_populations.append(f'city['Population'])\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(f'city['Population'])\n",
+    "    city_populations.append(city['Population'])\n",
     "city_populations"
    ]
   },
