--- a/index.ipynb
+++ b/index.ipynb
@@ -2125,7 +2125,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "fo"
+    "for city in cities:\n",
+    "    city_areas.append(city[])"
    ]
   },
   {
